src/test/ui/regions/regions-lifetime-of-struct-or-enum-variant.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/regions-lifetime-of-struct-or-enum-variant.rs:14:20
   |
LL |   let testValue = &id(Test);
   |                    ^^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/regions-lifetime-of-struct-or-enum-variant.rs:20:20
   |
LL |   let testValue = &id(MyEnum::Variant1);
   |                    ^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
